--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "concludis/api-client",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "homepage": "https://www.concludis.com/",
   "type": "library",
   "description": "API Client for Concludis Recruiting Software",
@@ -10,6 +10,10 @@
     {
       "name": "Timm Maass",
       "email": "tm@concludis.com"
+    },
+    {
+      "name": "Alexander Agaltsev",
+      "email": "aa@concludis.com"
     }
   ],
   "autoload": {
