CON-2605 :: implemented markup generation from raw containers

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "ext-curl": "*",
     "ext-json": "*",
     "ext-pdo": "*",
-    "ext-zip": "*"
+    "ext-zip": "*",
+    "ezyang/htmlpurifier" :  "~4.17"
   },
   "require-dev": {
   },
